FIX httpr dependency

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "httpr-provider-node-request",
-  "version": "1.0.0-rc1",
+  "version": "1.0.0-rc2",
   "description": "HTTP Node Request provider",
   "main": "dist/httpr-provider-node-request.js",
   "types": "defs/index.d.ts",
@@ -32,10 +32,11 @@
     "@types/mocha": "2.2.27",
     "@types/request": "0.0.41",
     "@types/sinon": "1.16.35",
+    "@types/sinon-chai": "2.7.27",
     "barrel-defgen": "~1.0.0",
     "chai": "3.5.0",
     "es6-promise": "4.0.5",
-    "httpr": "httpr@1.0.0-rc2",
+    "httpr": "1.0.0-rc3",
     "lodash": "^4.0.0",
     "mocha": "3.2.0",
     "proxyquire": "1.7.11",
